Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3346

Rebalance fails when trying to decommission tserver on a rack-aware cluster

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.15.0
    • 1.16.0
    • None
    • None

    Description

      When following the steps in the docs for decommissioning a tserver, the rebalance job fails with:

      Invalid argument: ignored tserver <tserver_uuid> is not reported among know tservers 
      

      Steps followed:
      1. Checked that ksck passes.
      2. Put the tserver to be decommissioned in maintenance mode.

      sudo -u kudu kudu tserver state enter_maintenance $MASTER_ADDRESSES 5ae499b1b870419daabb0e8da90ef233 

      3. Ran rebalance with -ignored_tservers and -move_replicas_from_ignored_tservers flags.

      sudo -u kudu kudu cluster rebalance $MASTER_ADDRESSES -move_replicas_from_ignored_tservers -ignored_tservers=5ae499b1b870419daabb0e8da90ef233 -v=1

      The logs for the rebalace command are attached.

       

      Attachments

        1. rebalance_ignored_tserver_1c.log.Z
          33.62 MB
          Georgiana Ogrean
        2. rebalance_v1.log.Z
          33.60 MB
          Georgiana Ogrean

        Activity

          People

            zhangyifan27 YifanZhang
            gogrean Georgiana Ogrean
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: